--- a/review/reviewer-1.tex
+++ b/review/reviewer-1.tex
@@ -124,6 +124,32 @@ AGMG is used with default parameters.
 
 
 \textcolor{red}{ME}
+%\begin{table}[!htbp]
+%  \begin{center}
+%    \caption{Comparison of different preconditioners for the homogeneous test
+%    problem (polygonal cells) using SI as solver.}
+%    \begin{tabular}{|c|c|c|c|c|c|c|}
+%      \hline
+%      & No-DSA & CG & PCG-SGS & PCG-ML/U & PCG-ML/MIS & AGMG \\
+%      \hline
+%      SI iterations   & 7311    & 23      & 23      & 23      & 23      & 23 \\
+%      CG iterations   & NA      & 46262   & 16712   & 652     & 603     & 555 \\
+%\hline
+%Precond init (s)     & NA      & NA      & 0.06388 & 1.73379 & 8.0426  & 0.388   \\
+%MIP calculation (s)  & NA      & 877.861 & 1263.31 & 198.63  & 191.989 & 31.242  \\
+%Total calculation (s)& 42666.7 & 1060.53 & 1447.53 & 382.275 & 384.422 & 216.946 \\
+%%Precond init (\%)               &  NA    &      NA &  0.00014972 &   0.0040636  &    0.01885 &  0.00090937 \\ 
+%%MIP calculation (\%)            &  NA    &  2.0575 &      2.9609 &     0.46554  &    0.44997 &    0.073223 \\
+%%Total calculation (\%)          &100     &  2.4856 &      3.3926 &     0.89596  &    0.90099 &     0.50847 \\
+%\hline
+%Precond init (\%)               &  NA    &      NA &   0.00015 &   0.0041  &    0.019&    0.00091 \\ 
+%MIP calculation (\%)            &  NA    &  2.08   &      2.96 &     0.47  &    0.45 &    0.07    \\
+%Total calculation (\%)          & 100    &  2.49   &      3.39 &     0.90  &    0.90 &    0.51    \\
+%      \hline
+%    \end{tabular}
+%    \label{comparison_homog_poly_si}
+%  \end{center}
+%\end{table}
 
 \bigskip
 
