--- a/review/editor.tex
+++ b/review/editor.tex
@@ -39,8 +39,8 @@ by B. Turcksin and J. C. Ragusa, for
 publication in the Journal of Computational Physics. We appreciate the comments of the reviewers as we
 believe they have allowed us to improve the paper.
 
-We have attached a file of detailed responses for Reviewer \#1. Reviewer \#2 was positive and their comments did not require an separate reply from us.
-We believe that we have adequately addressed all of their concerns and hope that our paper will be found suitable for publication.
+We have attached a file of detailed responses for Reviewer \#1. No reply was required for Reviewer \#2.
+We believe that we have adequately addressed all of their questions and hope that our paper will be found suitable for publication.
 
 %In our revision, we have addressed the issues raised by the
 %reviewers per their suggestions. 
